src/objects/BLND_DFFF_Employment_Application__c.object
<CustomObject>
    <description>MG_Employment Application</description>
    <fields>
        <fullName>BLND_Accomplishments__c</fullName>
        <label>Accomplishments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employment Applications</relationshipLabel>
        <relationshipName>Employment_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intern (unpaid)</fullName>
                </value>
                <value>
                    <fullName>Full time (40 hours Paid)</fullName>
                </value>
                <value>
                    <fullName>Part-time (&lt;40 hours Paid)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLND_Expected_Salary__c</fullName>
        <label>Expected Salary</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Is_Current_Job__c</fullName>
        <label>Is Current Job</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLND_Job1_Company__c</fullName>
        <label>Job1 Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Job1_Description__c</fullName>
        <label>Job1 Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Job1_Manager__c</fullName>
        <label>Job1 Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Job1_Salary__c</fullName>
        <label>Job1 Salary</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Job1_Title__c</fullName>
        <label>Job1 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Job2_Company__c</fullName>
        <label>Job2 Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Job2_Description__c</fullName>
        <label>Job2 Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Job2_Manager__c</fullName>
        <label>Job2 Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Job2_Salary__c</fullName>
        <label>Job2 Salary</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Job2_Title__c</fullName>
        <label>Job2 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Position_Applying_For__c</fullName>
        <label>Position Applying For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Preferred_Geographic_Location__c</fullName>
        <label>Preferred Geographic Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Reference2_Email__c</fullName>
        <label>Reference2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BLND_Reference2_Name__c</fullName>
        <label>Reference2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Reference_Email__c</fullName>
        <label>Reference Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BLND_Reference_Name__c</fullName>
        <label>Reference Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Univ_GPA__c</fullName>
        <label>Univ GPA</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_University_Degree_Earned__c</fullName>
        <label>University Degree Earned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bachelor of Arts</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Science</fullName>
                </value>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
                <value>
                    <fullName>Master of Arts</fullName>
                </value>
                <value>
                    <fullName>Master of Science</fullName>
                </value>
                <value>
                    <fullName>Post Baccalaureate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLND_University_Grad_Year__c</fullName>
        <label>University Grad Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_University__c</fullName>
        <label>University</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Employment Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EmpApp-{0}</displayFormat>
        <label>Employment Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>